# c_game_engine_tutorial

./: .gitignore
day1-main/: build.sh  game.c  kek.c  kek.h
day2-cmake_and_show_window/src/: kek.h  kek_window.c  pal.h  pal_main.c  pal_window_glfw.c
day3-static_libs/: .CMakeLists.txt.swp  .tags  CMakeLists.txt  ctags.sh
day3-static_libs/src/: game.c  kek.c  kek_private.h  pal.h  pal_window_glfw.c
mock_api/: CMakeLists.txt  buildrun.sh  kek.h  kut.h  pal.h  pal_window_glfw.h
